--- a/css/estilos4.css
+++ b/css/estilos4.css
@@ -35,6 +35,7 @@ label{
   width: 50vw;
   transform: translate(-350px);
   position: absolute;
+  z-index: 1;
   }
 #nav2{
   display: flex;
@@ -44,6 +45,7 @@ label{
   width: 50vw;
   transform: translate(750px);
   position: absolute;
+  z-index: 1;
   }
   li{
   padding: 10%;
@@ -137,7 +139,7 @@ label{
       border-radius: 1vw;
     }
     #nav2{
-      transform: translate(-550px);
+      transform: translate(1000px);
       width: 40vw;
       border-radius: 1vw;
     }
@@ -177,5 +179,50 @@ label{
     #nav2 button{
       font-size: 3vw;
     }
+  }
+
+  @media all and (min-width: 1000px) {
+    #head{
+      height: 5vw;
+    }
+    #nav1{
+      background-color: inherit;
+      transform: translate(0px);
+      flex-direction: row;
+      width: 100%;
+      justify-content: space-between;
+      border-radius: 0%;
+    }
+    #nav2{
+      display: none;
+    }
+    #nav1 a{
+      font-size: 1.5vw;
+    }
+    #nav1 li{
+      padding: 1vw;
+    }
+    #nav1 button{
+      font-size: 1.5vw;
+    }
+    label{
+      display: none;
+    }
+    main{
+      flex-direction: row;
+      flex-wrap: wrap;
+      width: 100%;
+      margin: 0;
+    }
+    section{
+      width: 40%;
+      margin-left: 3%;
+      margin-top: 3%;
+      margin-bottom: 0%;
+    }
+     #img{
+       align-self: center;
+     }
+     
   }
 
