--- a/css/estilos3.css
+++ b/css/estilos3.css
@@ -22,7 +22,14 @@
   margin-left: 1vw;
 }
 
-
+h3{
+  width: 100%;
+  margin-top: 1vw;
+  margin-bottom: 1vw;
+}
+#comentario{
+  padding: 1vw;
+}
 label{
   cursor:pointer;
 }
