--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -106,6 +106,43 @@ nav{
     background-color: inherit;
     border:  2px solid #800040;
   }
+
+  footer{
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 3vw;
+  }
+  #footer1{
+    margin-bottom: 3vw;
+  }
+  #footer1 i{
+    margin: 2vw;
+    color: #800040;
+  }
+  #footer1 i:hover{
+    cursor: pointer;
+  }
+  #footer2 p{
+    margin: 2vw;
+    width: 50%;
+    margin-left: 25%;
+  }
+  #footer2 h3{
+    margin-bottom: 1vw;
+  }
+  #footer2 p:hover{
+    cursor: pointer;
+  } 
+
+  input{
+    font-family: fantasy;
+    font-size: 2vw;
+    text-align: center;    
+  }
+
   @media all and (min-width: 700px) {
     nav{
       transform: translate(-550px);
@@ -167,5 +204,18 @@ nav{
     }
     #botonReg{
       height: 3vw;
+    }
+    footer{
+      margin-top: 5vw;
+      flex-direction: row;
+    }
+    #footer1 h1{
+      margin-bottom: 1vw;
+    }
+    #footer1{
+      width: 50%;
+    }
+    #footer2{
+      width: 50%;
     }
   }
