--- a/css/estilosRestaurante.css
+++ b/css/estilosRestaurante.css
@@ -209,12 +209,16 @@ nav{
       display: none;
     }
     main{
-      flex-direction: column;
+      flex-direction: row;
       width: 100%;
       margin: 0;
     }
-    section{
+    #container{
       width: 40%;
+      margin: auto;
+    }
+    section{
+      width: 100%;
       margin-left: 3%;
       margin-top: 3%;
       margin-bottom: 0%;
@@ -243,6 +247,9 @@ nav{
       color: white;
       width: 50%;
       height: 10%;
+    }
+    #usuario{
+      margin-left: 35%;
     } 
   }
 
