--- a/css/estilosLogin.css
+++ b/css/estilosLogin.css
@@ -28,7 +28,7 @@ nav{
   list-style: none;
   background-color: black;
   width: 50%;
-  transform: translate(-350px);
+  transform: translate(-50vw);
   position: absolute;
   z-index: 1;
   }
@@ -146,7 +146,7 @@ nav{
 
   @media all and (min-width: 700px) {
     nav{
-      transform: translate(-550px);
+      transform: translate(-50vw);
       width: 40vw;
       border-radius: 1vw;
     }
