--- a/css/estilosNormal.css
+++ b/css/estilosNormal.css
@@ -33,7 +33,7 @@ label{
   list-style: none;
   background-color: black;
   width: 50vw;
-  transform: translate(-350px);
+  transform: translate(-50vw);
   position: absolute;
   z-index: 1;
   }
@@ -43,7 +43,7 @@ label{
   list-style: none;
   background-color: black;
   width: 50vw;
-  transform: translate(750px);
+  transform: translate(150vw);
   position: absolute;
   z-index: 1;
   }
@@ -164,12 +164,12 @@ label{
   
   @media all and (min-width: 700px) {
     #nav1{
-      transform: translate(-550px);
+      transform: translate(-50vw);
       width: 40vw;
       border-radius: 1vw;
     }
     #nav2{
-      transform: translate(1000px);
+      transform: translate(100vw);
       width: 40vw;
       border-radius: 1vw;
     }
@@ -223,9 +223,7 @@ label{
       justify-content: space-between;
       border-radius: 0%;
     }
-    #nav2{
-      display: none;
-    }
+    
     #nav1 a{
       font-size: 1.5vw;
     }
@@ -235,9 +233,23 @@ label{
     #nav1 button{
       font-size: 1.5vw;
     }
-    label{
+    #ham{
       display: none;
     }
+    
+
+    #nav2{
+      width: 25vw;
+      display: none;
+      transform: translate(74vw);
+    }
+    #nav2 a{
+      font-size: 2vw;
+    }
+    #nav2 button{
+      font-size: 2vw;
+    }
+
     main{
       flex-direction: row;
       flex-wrap: wrap;
