--- a/css/estilosPlatos.css
+++ b/css/estilosPlatos.css
@@ -40,7 +40,7 @@ nav{
   list-style: none;
   background-color: black;
   width: 50vw;
-  transform: translate(-350px);
+  transform: translate(-50vw);
   position: absolute;
   }
   li{
@@ -145,7 +145,7 @@ nav{
   }
   @media all and (min-width: 700px) {
     nav{
-      transform: translate(-550px);
+      transform: translate(-50vw);
       width: 40vw;
       border-radius: 1vw;
     }
