Funcionalidad de subir platos

--- a/css/estilosLogin.css
+++ b/css/estilosLogin.css
@@ -139,7 +139,7 @@ nav{
   } 
 
   input{
-    font-family: fantasy;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2vw;
     text-align: center;    
   }
