--- a/css/estilosRegistro.css
+++ b/css/estilosRegistro.css
@@ -139,7 +139,7 @@ nav{
   } 
 
   input{
-    font-family: fantasy;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2vw;
     text-align: center;    
   }
