--- a/css/estilosSubir.css
+++ b/css/estilosSubir.css
@@ -150,8 +150,37 @@ nav{
     margin-left: 3vw;
   }
 
-  
-
+  #formulario{
+    background-color: white;
+    width: 80%;
+    padding: 3%;
+    margin-left: 7%;
+    margin-top: 5%;
+    border-radius: 3vw;
+  }
+  #formulario label{
+    margin-top: 3vw;
+    text-align: center;
+    color: black;
+  }
+  #campos{
+    display: flex;
+    flex-direction: column;
+    padding: 3%;
+  }
+  #foto{
+    align-self: center;
+  }
+  #boton1{
+    border: 3px solid #800040;
+  }
+  #nombre{
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  #formulario textarea{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
   @media all and (min-width: 700px) {
     nav{
       transform: translate(-50vw);
@@ -208,7 +237,7 @@ nav{
     nav li{
       padding: 1vw;
     }
-    label{
+    #hamburguesa{
       display: none;
     }
     main{
@@ -253,6 +282,9 @@ nav{
     }
     #usuario{
       margin-left: 35%;
-    } 
+    }
+    #formulario label{
+      font-size: 1.5vw;
+    }
   }
 
