--- a/css/estilosNormal.css
+++ b/css/estilosNormal.css
@@ -161,7 +161,22 @@ label{
   #footer2 p:hover{
     cursor: pointer;
   } 
-  
+  .slider{
+    animation: cambio 10s infinite alternate linear;
+  }
+  @keyframes cambio {
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+    
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+    
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+    
+    75% {margin-left: -300%;}
+    100% {margin-left: -300%;}
+  }
   @media all and (min-width: 700px) {
     #nav1{
       transform: translate(-50vw);
