--- a/css/estilosPlatos.css
+++ b/css/estilosPlatos.css
@@ -145,6 +145,22 @@ nav{
     border: 3px solid #800040;
     display: none;
   }
+  .slider{
+    animation: cambio 10s infinite alternate linear;
+  }
+  @keyframes cambio {
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+    
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+    
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+    
+    75% {margin-left: -300%;}
+    100% {margin-left: -300%;}
+  }
   @media all and (min-width: 700px) {
     nav{
       transform: translate(-50vw);
