--- a/css/estilosRestaurante.css
+++ b/css/estilosRestaurante.css
@@ -149,7 +149,22 @@ nav{
     color: white;
     margin-left: 3vw;
   }
-
+  .slider{
+    animation: cambio 10s infinite alternate linear;
+  }
+  @keyframes cambio {
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+    
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+    
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+    
+    75% {margin-left: -300%;}
+    100% {margin-left: -300%;}
+  }
   @media all and (min-width: 700px) {
     nav{
       transform: translate(-50vw);
